--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
  
-<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00DQy00000FB17I" method="POST">
+<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D5g0000062hlZ" method="POST">
  
-<input type=hidden name="orgid" value="00DQy00000FB17I">
+<input type=hidden name="orgid" value="00D5g0000062hlZ">
 <input type=hidden name="retURL" value="https://proxel.in/">
  
 <!--  ----------------------------------------------------------------------  -->
@@ -33,7 +33,14 @@
  
 <label for="description">Description</label><textarea name="description"></textarea><br>
  
-<input type="hidden"  id="external" name="external" value="1" /><br>
+<label for="reason">Case Reason</label><select  id="reason" name="reason"><option value="">--None--</option><option value="Installation">Installation</option>
+<option value="Equipment Complexity">Equipment Complexity</option>
+<option value="Performance">Performance</option>
+<option value="Breakdown">Breakdown</option>
+<option value="Equipment Design">Equipment Design</option>
+<option value="Feedback">Feedback</option>
+<option value="Other">Other</option>
+</select><br>
  
 <input type="submit" name="submit">
  
